// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-timepicker default 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-uuid-controls"
              aria-haspopup="true"
              id="mTimepicker-uuid"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-uuid"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-timepicker label 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTimepicker-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Activity start time
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-uuid-controls"
              aria-haspopup="true"
              id="mTimepicker-uuid"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-uuid"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-timepicker label-up 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 592px;"
>
  <div
    class="m-input-style m--is-label-up m--has-label m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTimepicker-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Activity start time
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-uuid-controls"
              aria-haspopup="true"
              id="mTimepicker-uuid"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-uuid"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-timepicker max widht 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 896px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-uuid-controls"
              aria-haspopup="true"
              id="mTimepicker-uuid"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-uuid"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-timepicker min 8:45 / max 15:15 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-value m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-uuid-controls"
              aria-haspopup="true"
              id="mTimepicker-uuid"
              inputmode="decimal"
              max="15:15"
              min="8:45"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-uuid"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-timepicker reactivity 1`] = `
<div>
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-uuid-controls"
                aria-haspopup="true"
                id="mTimepicker-uuid"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-uuid"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-uuid-controls"
                aria-haspopup="true"
                id="mTimepicker-uuid"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-uuid"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-timepicker step 15m 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-uuid-controls"
              aria-haspopup="true"
              id="mTimepicker-uuid"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="900"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-uuid"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
